--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <!-- header -->
+    <!-- header -->
   <header id="header">
     <div class="header-nav">
       <div class="wrap">
@@ -21,12 +21,12 @@
         <!-- nav -->
         <nav class="nav hide">
           <ul class="header-nav-list">
-            <li><a href="">Danh Mục</a></li>
-            <li><a href="">Showroom</a></li>
-            <li><a href="">Gaming Gear</a></li>
-            <li><a href="">Tư Vấn</a></li>
             <li><i class="fas fa-search"></i></li>
             <li class="cart"><i class="fas fa-shopping-cart"></i><span class="number">0</span></li>
+            <li><a href="">Danh Mục</a></li>
+            <li><a href="">Đại Lý</a></li>
+            <li><a href="">Gaming Gear</a></li>
+            <li><a href="">Tư Vấn</a></li>
           </ul>     
         </nav>
       </div>
@@ -45,6 +45,181 @@
       </form>
     </div>
   </header>
+    <!-- main -->
+  <main id="main">
+      <!-- hot deal -->
+    <div class="section wrap hotdeal">
+      <div class="section-head">
+        <span class="section-head-title">Hot Deal</span>
+        <a href="" class="section-head-more">Xem Thêm >></a>
+      </div>
+      <div class="section-main">
+
+        <div class="item">
+          <a href="">
+            <img src="res/img/item1.jpg" alt="Item1">
+            <span>
+              <h4>Bộ Vi Xử Lý Core i5</h4>
+              <p>Mô tả ngắn: Core i5 9400 / 9M / 2.9GHz upto 4.1GHz / 6 nhân 6 luồng</p>
+              <p class="rate"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+              <button>Thêm vào giỏ</button>
+            </span>
+            <p class="price">Giá: 129$</p>
+          </a>
+        </div>
+
+        <div class="item">
+          <a href="">
+            <img src="res/img/item2.jpg" alt="Item2">
+            <span>
+              <h4>Bộ Vi Xử Lý AMD</h4>
+              <p>Mô tả ngắn: AMD Athlon™ 200GE 3.2GHz / 2 nhân 4 luồng / Radeon™ Vega 3 Graphics</p>
+              <p class="rate"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
+              <button>Thêm vào giỏ</button>
+            </span>
+            <p class="price">Giá: 99$</p>
+          </a>
+        </div>
+
+        <div class="item">
+          <a href="">
+            <img src="res/img/item3.jpg" alt="Item3">
+            <span>
+              <h4>Bộ Vi Xử Lý AMD Ryzen 3</h4>
+              <p>Mô tả ngắn: AMD Ryzen 3 3200G /6MB /3.6GHz /4 nhân 4 luồng</p>
+              <p class="rate"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+              <button>Thêm vào giỏ</button>
+            </span>
+            <p class="price">Giá: 159$</p>
+          </a>
+        </div>
+
+        <div class="item">
+          <a href="">
+            <img src="res/img/item4.jpg" alt="Item4">
+            <span>
+              <h4>Bộ Vi Xử Lý Core AMD Ryzen 9</h4>
+              <p>Mô tả ngắn: AMD Ryzen 9 3900x /70MB /3.8GHz /12 nhân 24 luồng</p>
+              <p class="rate"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+              <button>Thêm vào giỏ</button>
+            </span>
+            <p class="price">Giá: 519$</p>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Gaming gear -->
+    <div class="section wrap hotdeal">
+      <div class="section-head">
+        <span class="section-head-title">Gaming Gear</span>
+        <a href="" class="section-head-more">Xem Thêm >></a>
+      </div>
+      <div class="section-main">
+
+        <div class="item">
+          <a href="">
+            <img src="res/img/Gaming1.png" alt="Item1">
+            <span>
+              <h4>Sony Playstation 4 Pro 1TB Party Bundle</h4>
+              <p>Mô tả ngắn: PlayStation 4 Pro (Jet Black) with 1TB HDD x 1 (CUH-7218BB01), DUALSHOCK 4 wireless controller (Jet Black) x 2</p>
+              <p class="rate"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+              <button>Thêm vào giỏ</button>
+            </span>
+            <p class="price">Giá: 499$</p>
+          </a>
+        </div>
+
+        <div class="item">
+          <a href="">
+            <img src="res/img/Gaming2.png" alt="Item2">
+            <span>
+              <h4>Tai nghe SteelSeries Arctis Pro Wireless</h4>
+              <p>Mô tả ngắn: Đọ nhạy: 102 dBSPL, Micro : -38 dBV/Pa</p>
+              <p class="rate"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
+              <button>Thêm vào giỏ</button>
+            </span>
+            <p class="price">Giá: 389$</p>
+          </a>
+        </div>
+
+        <div class="item">
+          <a href="">
+            <img src="res/img/Gaming3.jpg" alt="Item3">
+            <span>
+              <h4>Chuột Razer Basilisk Ultimate</h4>
+              <p>Mô tả ngắn: 20000DPI</p>
+              <p class="rate"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+              <button>Thêm vào giỏ</button>
+            </span>
+            <p class="price">Giá: 239$</p>
+          </a>
+        </div>
+
+        <div class="item">
+          <a href="">
+            <img src="res/img/Gaming4.png" alt="Item4">
+            <span>
+              <h4>Ghế Noble Chair Hero Series Real Leather</h4>
+              <p>Mô tả ngắn: Chất liệu: Da thật</p>
+              <p class="rate"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+              <button>Thêm vào giỏ</button>
+            </span>
+            <p class="price">Giá: 1259$</p>
+          </a>
+        </div>
+      </div>
+    </div>
+  </main>
+    <!-- footer -->
+  <footer id="footer">
+    <div class=" wrap info">
+          <!-- info nav -->
+      <div class="info-col">
+        <section>
+          <div class="logo"><a href="index.html" id="logo"><span class="word-l">Top</span><span class="word-r">GEAR</span></a></div>
+          <p>Là đơn vị chuyên phân phối các sản phẩm linh máy tính, đồ chơi công nghệ và cũng là đơn vị chuyên cung cấp dịch vụ bảo hành và nâng cấp máy tính. Uy tín và tâm huyết luôn được đặt lên hàng đầu.</p>
+          <address><i class="fas fa-map-marker-alt"></i> Địa chỉ: Hà Nội</address>
+          <p class="copyright">© 2020 Copyright</p>
+        </section>
+
+        <section>
+          <h3 class="info-col-title">Hỗ Trợ</h3>
+          <ul class="help">
+            <li><a href="">Hỏi đáp</a></li>
+            <li><a href="">Hướng dẫn mua hàng</a></li>
+            <li><a href="">Góp ý, khiếu nại</a></li>
+            <li><a href="">Yêu cầu đặc biệt</a></li>
+          </ul>
+        </section>
+
+        <section>
+          <h3 class="info-col-title">Kết Nối</h3>
+          <ul class="social">
+            <li><a href=""><i class="fab fa-facebook"></i> Facebook</a></li>
+            <li><a href=""><i class="fab fa-twitter"></i> Twitter</a></li>
+            <li><a href=""><i class="fab fa-youtube"></i> Youtube</a></li>
+            <li><a href=""><i class="fab fa-tumblr-square"></i> Tumblr</a></li>
+          </ul>
+        </section>
+
+        <section>
+          <h3 class="info-col-title">Liên Hệ</h3>
+          <ul class="contact">
+            <li><a href=""><i class="fas fa-map-marked"></i> Bản đồ</a></li>
+            <li><a href="tel:+19001003" class="phone"><i class="fas fa-phone"></i> Tổng đài: 19001003</a></li>
+            <li><a href="mailto:"><i class="fas fa-envelope"></i> cskh@topgear.com.vn</a></li>
+            <li><a href="tel:+84327701953" class="phone"><i class="fas fa-phone"></i> Hotline: 0327701953</a></li>
+            <form class="contact-register">
+              <input type="email" name="contact-email" id="contact-email">
+              <input type="submit" value="Nhận Email">
+            </form>
+          </ul>
+        </section>
+      </div>
+    </div>
+  </footer>
+    <!-- modal -->
 
 
     <!-- script -->
