--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </div>
     </div>
 
-    <!-- Gaming gear -->
+      <!-- Gaming gear -->
     <div class="section wrap hotdeal">
       <div class="section-head">
         <span class="section-head-title">Gaming Gear</span>
@@ -170,6 +170,85 @@
         </div>
       </div>
     </div>
+
+      <!-- Phụ Kiện Khác -->
+    <div class="section wrap hotdeal">
+      <div class="section-head">
+        <span class="section-head-title">Phụ Kiện Khác</span>
+        <a href="" class="section-head-more">Xem Thêm >></a>
+      </div>
+      <div class="section-main">
+
+        <div class="item">
+          <a href="">
+            <img src="res/img/other1.png" alt="Item1">
+            <span>
+              <h4>Bộ Dây Nguồn Custom Corsair Premium Type 4 Gen 4 – Blue</h4>
+              <p></p>
+              <p class="rate"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
+              <button>Thêm vào giỏ</button>
+            </span>
+            <p class="price">Giá: 169$</p>
+          </a>
+        </div>
+
+        <div class="item">
+          <a href="">
+            <img src="res/img/other2.png" alt="Item2">
+            <span>
+              <h4>Bộ Dây Nguồn Custom Corsair Premium Type 4 Gen 4 – White</h4>
+              <p></p>
+              <p class="rate"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
+              <button>Thêm vào giỏ</button>
+            </span>
+            <p class="price">Giá: 169$</p>
+          </a>
+        </div>
+
+        <div class="item">
+          <a href="">
+            <img src="res/img/other3.jpg" alt="Item3">
+            <span>
+              <h4>Balo RAZER ROUGE BACKPACK (15.6 Inch)</h4>
+              <p></p>
+              <p class="rate"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+              <button>Thêm vào giỏ</button>
+            </span>
+            <p class="price">Giá: 189$</p>
+          </a>
+        </div>
+
+        <div class="item">
+          <a href="">
+            <img src="res/img/other4.jpg" alt="Item4">
+            <span>
+              <h4>Bao Silicon cho Tai nghe Sony WF-1000XM3</h4>
+              <p></p>
+              <p class="rate"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+              <button>Thêm vào giỏ</button>
+            </span>
+            <p class="price">Giá: 9.99$</p>
+          </a>
+        </div>
+      </div>
+    </div>
+
+      <!-- hãng -->
+    <div class="section wrap vendor">
+      <div class="section-head">
+        <span class="section-head-title">Nhà Cung Cấp</span>
+      </div>
+      <div class="section-main">
+        <ul>
+          <li><a href=""><img src="res/img/hang1.jpg" alt=""></a></li>
+          <li><a href=""><img src="res/img/hang2.png" alt=""></a></li>
+          <li><a href=""><img src="res/img/hang3.jpg" alt=""></a></li>
+          <li><a href=""><img src="res/img/hang4.jpg" alt=""></a></li>
+          <li><a href=""><img src="res/img/hang5.jpg" alt=""></a></li>
+          <li><a href=""><img src="res/img/hang6.jpg" alt=""></a></li>
+        </ul>
+      </div>
+    </div>
   </main>
     <!-- footer -->
   <footer id="footer">
@@ -211,8 +290,8 @@
             <li><a href="mailto:"><i class="fas fa-envelope"></i> cskh@topgear.com.vn</a></li>
             <li><a href="tel:+84327701953" class="phone"><i class="fas fa-phone"></i> Hotline: 0327701953</a></li>
             <form class="contact-register">
-              <input type="email" name="contact-email" id="contact-email">
-              <input type="submit" value="Nhận Email">
+              <input type="email" name="contact-email" id="contact-email" placeholder="Email">
+              <input type="submit" value="Nhận Ưu Đãi">
             </form>
           </ul>
         </section>
@@ -221,8 +300,17 @@
   </footer>
     <!-- modal -->
 
+    <div class="modal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <img src="res/img/modal_qc.jpg" alt="">
+          <span id="close-modal"><i class="fas fa-times"></i></span>
+        </div>
+      </div>
 
+    </div>
     <!-- script -->
+  <script src="flickity.pkgd.min.js"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
   <script defer src="javascript.js"></script>
 </body>
